Fixed frontend editing extra field and media thumb issue.
We fixed here frontend editing extra field and helix3 media thumb issues.

--- a/template/css/frontend-edit.css
+++ b/template/css/frontend-edit.css
@@ -13,6 +13,9 @@
 .layout-edit .btn-toolbar {
   margin-bottom: 20px;
 }
+.layout-edit .btn-toolbar .btn .fa{
+  padding-right: 5px;
+}
 .layout-edit .tab-content {
   padding-top: 20px;
 }
