In frontend edit legacy less file path changed

--- a/template/less/frontend-edit.less
+++ b/template/less/frontend-edit.less
@@ -5,11 +5,11 @@
 
 .layout-edit {
 
-	@import "bootstrap-legacy/variables";
-	@import "bootstrap-legacy/mixins";
-	@import "bootstrap-legacy/forms.less";
-	@import "bootstrap-legacy/wells.less";
-	@import "bootstrap-legacy/accordion.less";
+	@import "legacy/variables";
+	@import "legacy/mixins";
+	@import "legacy/forms.less";
+	@import "legacy/wells.less";
+	@import "legacy/accordion.less";
 
 	//Edit
 	select.inputbox,
