--- a/template/css/frontend-edit.css
+++ b/template/css/frontend-edit.css
@@ -95,7 +95,8 @@ svg {
   font-size: 18px;
   margin-top: 0;
 }
-#mailto-window input[type="text"] {
+#mailto-window input[type="text"],
+#mailto-window input[type="email"] {
   height: auto !important;
 }
 .chzn-container.chzn-container-multi input[type="text"] {
