--- a/template/less/theme.less
+++ b/template/less/theme.less
@@ -1,7 +1,7 @@
 /**
 * @package Helix Framework
 * @author JoomShaper http://www.joomshaper.com
-* @copyright Copyright (c) 2010 - 2016 JoomShaper
+* @copyright Copyright (c) 2010 - 2018 JoomShaper
 * @license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 or later
 */
 
@@ -9,70 +9,70 @@
 /* ************   START TABLE OF CONTENT   ************ */
 /* **************************************************** */
 /*
-        01. Base Style
-        01. Button & Input
-        03. Top Bar
-        04. Header
-        05. Page Title
-        06. body innerwrapper
-        07. Page Builder Addons
-        08. Module
-        09. Login Form
-        10. Search
-        11. Blog
-        12. Bottom
-        13. Footer
-        14. Comingsoon
-        15. Error page
-        16. Mixed CSS
+    01. Base Style
+    01. Button & Input
+    03. Top Bar
+    04. Header
+    05. Page Title
+    06. body innerwrapper
+    07. Page Builder Addons
+    08. Module
+    09. Login Form
+    10. Search
+    11. Blog
+    12. Bottom
+    13. Footer
+    14. Comingsoon
+    15. Error page
+    16. Mixed CSS
 
-        /* ************   END:: TABLE OF CONTENT  ************* */
-        /* **************************************************** */
+/* ************   END:: TABLE OF CONTENT  ************* */
+/* **************************************************** */
 
 
-        /* ************   START Start Base Style   ************* */
-        /* **************************************************** */
+/* ************   START Start Base Style   ************* */
+/* **************************************************** */
 
-        a {
-            -webkit-transition: color 400ms, background-color 400ms;
-            transition: color 400ms, background-color 400ms;
-        }
+a {
+    -webkit-transition: color 400ms, background-color 400ms;
+    transition: color 400ms, background-color 400ms;
+}
 
-        body {
-            line-height: 24px;
-            -webkit-transition: all 400ms ease;
-            transition: all 400ms ease;
-            background-color: @bg_color;
+body {
+    line-height: 24px;
+    -webkit-transition: all 400ms ease;
+    transition: all 400ms ease;
+    background-color: @bg_color;
 
-        }
+}
 
-        a, a:hover, a:focus, a:active {
-            text-decoration: none;
-        }
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+}
 
-        label {
-            font-weight: normal;
-        }
+label {
+    font-weight: normal;
+}
 
-        legend {
-            padding-bottom: 10px;
-        }
+legend {
+    padding-bottom: 10px;
+}
 
-        img {
-            display: block;
-            max-width: 100%;
-            height: auto;
-        }
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 
-        /* ***************   END:: Base Style  **************** */
-        /* **************************************************** */
+/* ***************   END:: Base Style  **************** */
+/* **************************************************** */
 
-        /* ****************   START Button   ****************** */
-        /* **************************************************** */
+/* ****************   START Button   ****************** */
+/* **************************************************** */
 
-        .btn, .sppb-btn {
-            .transition(~'color 400ms, background-color 400ms, border-color 400ms');
-        }
+.btn, .sppb-btn {
+    .transition(~'color 400ms, background-color 400ms, border-color 400ms');
+}
 
 //Offline
 .offline-inner {
@@ -126,7 +126,9 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
         color: #000;
     }
 }
-
+.backface-visible {
+    backface-visibility: hidden;
+}
 /* *****************   END:: Common  ****************** */
 /* **************************************************** */
 
@@ -1786,5 +1788,24 @@ table.category {
         font-size: 90%;
     }
 }
+
 /* *********   END:: Responsive Media Query   ********* */
+/* **************************************************** */
+
+/* ******************  Start SPPB 3 ******************* */
+/* **************************************************** */
+
+//Image Content
+@media (min-width: 768px) {
+    .sppb-col-sm-offset-6 {
+        margin-left: 50%;
+    }
+}
+
+//Testimonial Pro
+.sppb-testimonial-pro .sppb-item img {
+    display: inline-block;
+    margin-bottom: 10px;
+}
+/* ******************  End:: SPPB 3 ******************* */
 /* **************************************************** */
